fixed on mobile

--- a/myappmba-landing/scss/_icons.scss
+++ b/myappmba-landing/scss/_icons.scss
@@ -1,4 +1,8 @@
 .features-icons {
+  h3 {
+  font-weight: 800;
+  }
+  color: #fff;
   padding-top: 3rem;
   padding-bottom: 3rem;
   .features-icons-item {
