--- a/myappmba-landing/scss/_masthead.scss
+++ b/myappmba-landing/scss/_masthead.scss
@@ -3,8 +3,8 @@ header.masthead {
   background-color: $gray-800;
   background: url('../img/bg-masthead.jpg') no-repeat center center;
   @include background-cover;
-  padding-top: 5rem;
-  padding-bottom: 8rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   .overlay {
     position: absolute;
     background-color: $gray-900;
@@ -27,4 +27,9 @@ header.masthead {
       font-size: 3rem;
     }
   }
+}
+
+#action-box {
+  background: $red;
+  border: 2px solid darken($red, 10%);
 }
