--- a/myappmba-landing/scss/_showcase.scss
+++ b/myappmba-landing/scss/_showcase.scss
@@ -10,7 +10,7 @@
     padding: 3rem !important;
   }
   .showcase-img {
-    min-height: 30rem;
+    height: 200px;
     background-size: cover;
   }
   @media (min-width: 768px) {
@@ -18,6 +18,10 @@
       padding-left: 7rem !important;
       padding-right: 7rem !important;
       padding: 7rem !important;
+    }
+    .showcase-img {
+      min-height: 30rem;
+      background-size: cover;
     }
   }
 }
