--- a/myappmba-landing/scss/landing-page.scss
+++ b/myappmba-landing/scss/landing-page.scss
@@ -16,15 +16,3 @@
 .hidden {
   display: none;
 }
-
-#action-box {
-  background: $red;
-  border: 2px solid darken($red, 10%);
-}
-
-.features-icons {
-  h3 {
-  font-weight: 800;
-  }
-  color: #fff;
-}
